Add auth to apiserver (#864)
* add definitions

* implement auth

* add middleware

* add auth middleware

* delete whitelist

* delete whitelist

* add logs

* add swagger info and expire time

* fix swagger info

* fix auth timer, add auth/info

* add enableAuth env

* add "expireAt" return parameter

* add secret to save tokens

* implement token expire time check

* fix request and response parameter name

* save token data by secret

* save token data by secret, fix

* clear up codes
