# pkg/apiserver/docs/swagger.json
@@ -4,6 +4,80 @@
         "contact": {}
     },
     "paths": {
+        "/cluster/auth/auth": {
+            "post": {
+                "description": "Authorize user, return a token and expireAt if success",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Authorization",
+                "parameters": [
+                    {
+                        "description": "body",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.AuthReqBody"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.AuthRspBody"
+                        }
+                    }
+                }
+            }
+        },
+        "/cluster/auth/info": {
+            "get": {
+                "description": "Get the status if enable authorization",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Auth info",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.AuthInfoRspBody"
+                        }
+                    }
+                }
+            }
+        },
+        "/cluster/auth/logout": {
+            "post": {
+                "description": "Logout the token, if verify token success, delete this token and return success",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Logout the token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.AuthLogoutRspBody"
+                        }
+                    }
+                }
+            }
+        },
         "/cluster/drbd": {
             "get": {
                 "description": "get DRBDSettingGet",
@@ -90,7 +164,7 @@
         },
         "/cluster/localdisks": {
             "get": {
-                "description": "get LocalDiskList 状态枚举 （Active、Inactive、Unknown、Pending、Available、Bound)",
+                "description": "get LocalDiskList 状态枚举 (Active、Inactive、Unknown、Pending、Available、Bound)",
                 "consumes": [
                     "application/json"
                 ],
@@ -1370,7 +1444,7 @@
                 "tags": [
                     "Volume"
                 ],
-                "summary": "摘要 获取指定数据卷操作记录信息 状态枚举 （Submitted、AddReplica、SyncReplica、PruneReplica、InProgress、Completed、ToBeAborted、Cancelled、Aborted、Failed)",
+                "summary": "摘要 获取指定数据卷操作记录信息 状态枚举 (Submitted、AddReplica、SyncReplica、PruneReplica、InProgress、Completed、ToBeAborted、Cancelled、Aborted、Failed)",
                 "parameters": [
                     {
                         "type": "string",
@@ -1448,6 +1522,44 @@
         }
     },
     "definitions": {
+        "api.AuthInfoRspBody": {
+            "type": "object",
+            "properties": {
+                "enabled": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "api.AuthLogoutRspBody": {
+            "type": "object",
+            "properties": {
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "api.AuthReqBody": {
+            "type": "object",
+            "properties": {
+                "accessId": {
+                    "type": "string"
+                },
+                "secretKey": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.AuthRspBody": {
+            "type": "object",
+            "properties": {
+                "expireAt": {
+                    "type": "integer"
+                },
+                "token": {
+                    "type": "string"
+                }
+            }
+        },
         "api.DiskReqBody": {
             "type": "object",
             "properties": {
@@ -3154,27 +3266,6 @@
                 }
             }
         },
-        "v1alpha1.Disk": {
-            "type": "object",
-            "properties": {
-                "capacity": {
-                    "description": "Capacity",
-                    "type": "integer"
-                },
-                "devPath": {
-                    "description": "DevPath",
-                    "type": "string"
-                },
-                "diskType": {
-                    "description": "DiskType SSD/HDD/NVME...",
-                    "type": "string"
-                },
-                "status": {
-                    "description": "Status",
-                    "type": "string"
-                }
-            }
-        },
         "v1alpha1.DiskAttributes": {
             "type": "object",
             "properties": {
@@ -3399,8 +3490,8 @@
         "v1alpha1.LocalDiskNodeSpec": {
             "type": "object",
             "properties": {
-                "attachNode": {
-                    "description": "AttachNode represent where disk is attached",
+                "nodeName": {
+                    "description": "NodeName represent where disk is attached",
                     "type": "string"
                 }
             }
@@ -3408,16 +3499,49 @@
         "v1alpha1.LocalDiskNodeStatus": {
             "type": "object",
             "properties": {
-                "allocatableDisk": {
-                    "description": "AllocatableDisk",
+                "conditions": {
+                    "description": "Represents the latest available observations of a localstoragenode's current state.\n+optional",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/v1alpha1.StorageNodeCondition"
+                    }
+                },
+                "freeCapacity": {
+                    "description": "FreeCapacity indicates the free capacity of all the disks",
                     "type": "integer"
                 },
-                "disks": {
-                    "description": "Disks key is the name of LocalDisk",
+                "freeDisk": {
+                    "description": "FreeDisk",
+                    "type": "integer"
+                },
+                "poolExtendRecords": {
+                    "description": "PoolExtendRecords record why disks are joined in the pool\n+optional",
                     "type": "object",
                     "additionalProperties": {
-                        "$ref": "#/definitions/v1alpha1.Disk"
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/definitions/v1alpha1.LocalDiskClaimSpec"
+                        }
                     }
+                },
+                "pools": {
+                    "description": "There may have multiple storage pools in a node.\ne.g. HDD_POOL, SSD_POOL, NVMe_POOL\nPools: poolName -\u003e LocalPool",
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/v1alpha1.LocalPool"
+                    }
+                },
+                "state": {
+                    "description": "State of the Local Storage Node/Member: New, Active, Inactive, Failed",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/v1alpha1.State"
+                        }
+                    ]
+                },
+                "totalCapacity": {
+                    "description": "TotalCapacity indicates the capacity of all the disks",
+                    "type": "integer"
                 },
                 "totalDisk": {
                     "description": "TotalDisk",
@@ -3623,60 +3747,6 @@
                 }
             }
         },
-        "v1alpha1.LocalStorageNodeCondition": {
-            "type": "object",
-            "properties": {
-                "lastTransitionTime": {
-                    "description": "Last time the condition transitioned from one status to another.",
-                    "type": "string"
-                },
-                "lastUpdateTime": {
-                    "description": "The last time this condition was updated.",
-                    "type": "string"
-                },
-                "message": {
-                    "description": "A human-readable message indicating details about the transition.",
-                    "type": "string"
-                },
-                "reason": {
-                    "description": "The reason for the condition's last transition.",
-                    "type": "string"
-                },
-                "status": {
-                    "description": "Status of the condition, one of True, False, Unknown.",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/github_com_hwameistor_hwameistor_pkg_apis_hwameistor_v1alpha1.ConditionStatus"
-                        }
-                    ]
-                },
-                "type": {
-                    "description": "Type of localstoragenode condition.",
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/v1alpha1.LocalStorageNodeConditionType"
-                        }
-                    ]
-                }
-            }
-        },
-        "v1alpha1.LocalStorageNodeConditionType": {
-            "type": "string",
-            "enum": [
-                "Available",
-                "UnAvailable",
-                "Progressing",
-                "StorageExpandFailure",
-                "StorageExpandSuccess"
-            ],
-            "x-enum-varnames": [
-                "StorageAvailable",
-                "StorageUnAvailable",
-                "StorageProgressing",
-                "StorageExpandFailure",
-                "StorageExpandSuccess"
-            ]
-        },
         "v1alpha1.LocalStorageNodeSpec": {
             "type": "object",
             "properties": {
@@ -3699,7 +3769,7 @@
                     "description": "Represents the latest available observations of a localstoragenode's current state.\n+optional",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/v1alpha1.LocalStorageNodeCondition"
+                        "$ref": "#/definitions/v1alpha1.StorageNodeCondition"
                     }
                 },
                 "poolExtendRecords": {
@@ -4169,11 +4239,6 @@
         "v1alpha1.State": {
             "type": "string",
             "enum": [
-                "",
-                "ToBeMounted",
-                "ToBeUnMount",
-                "Mounted",
-                "NotReady",
                 "Ready",
                 "Maintain",
                 "Offline",
@@ -4207,14 +4272,14 @@
                 "Failed",
                 "Available",
                 "InUse",
-                "Offline"
+                "Offline",
+                "",
+                "ToBeMounted",
+                "ToBeUnMount",
+                "Mounted",
+                "NotReady"
             ],
             "x-enum-varnames": [
-                "MountPointStateEmpty",
-                "MountPointToBeMounted",
-                "MountPointToBeUnMount",
-                "MountPointMounted",
-                "MountPointNotReady",
                 "NodeStateReady",
                 "NodeStateMaintain",
                 "NodeStateOffline",
@@ -4248,7 +4313,66 @@
                 "OperationStateFailed",
                 "DiskStateAvailable",
                 "DiskStateInUse",
-                "DiskStateOffline"
+                "DiskStateOffline",
+                "MountPointStateEmpty",
+                "MountPointToBeMounted",
+                "MountPointToBeUnMount",
+                "MountPointMounted",
+                "MountPointNotReady"
+            ]
+        },
+        "v1alpha1.StorageNodeCondition": {
+            "type": "object",
+            "properties": {
+                "lastTransitionTime": {
+                    "description": "Last time the condition transitioned from one status to another.",
+                    "type": "string"
+                },
+                "lastUpdateTime": {
+                    "description": "The last time this condition was updated.",
+                    "type": "string"
+                },
+                "message": {
+                    "description": "A human-readable message indicating details about the transition.",
+                    "type": "string"
+                },
+                "reason": {
+                    "description": "The reason for the condition's last transition.",
+                    "type": "string"
+                },
+                "status": {
+                    "description": "Status of the condition, one of True, False, Unknown.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/github_com_hwameistor_hwameistor_pkg_apis_hwameistor_v1alpha1.ConditionStatus"
+                        }
+                    ]
+                },
+                "type": {
+                    "description": "Type of localstoragenode condition.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/v1alpha1.StorageNodeConditionType"
+                        }
+                    ]
+                }
+            }
+        },
+        "v1alpha1.StorageNodeConditionType": {
+            "type": "string",
+            "enum": [
+                "Available",
+                "UnAvailable",
+                "Progressing",
+                "ExpandFailure",
+                "ExpandSuccess"
+            ],
+            "x-enum-varnames": [
+                "StorageAvailable",
+                "StorageUnAvailable",
+                "StorageProgressing",
+                "StorageExpandFailure",
+                "StorageExpandSuccess"
             ]
         },
         "v1alpha1.Topology": {
